gcp/k8_project/live/stage/app/volume-fortune-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
  labels:
    app: demo
    enabled: "true"
spec:
  containers:
    # The first container is called html-generator and runs the luksa/fortune image
    - image: luksa/fortune
      name: html-generator
      # resources:
        # limits:
          # memory: "128Mi"
          # cpu: "500m"
      # The volume called html is mounted at /var/htdocs in the container
      volumeMounts:
      - name: html
        mountPath: /var/htdocs
      # The second container is called web-server and runs the nginx:alpine image
    - image: nginx:alpine
      name: web-server
      # resources:
        # limits:
        #   memory: "128Mi"
        #   cpu: "500m"
      # The same volume as above is mounted at /usr/share/nginx/html as read-only
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
      ports:
      - containerPort: 80
        protocol: TCP
  # A single emptyDir volume called html thats mounted in the two containers above
  volumes:
  - name: html
    # volume  was  created  on  the  actual  disk  of  the  worker node hosting your pod
    emptyDir: {}
    # Tell Kubernetes to create the emptyDir on a tmpfs filesystem (in memory instead of on disk).
    # emptyDir:
    #   medium: Memory
