gcp/k8_project/live/stage/app/webserver-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-app-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: webserver
      enabled: "true"
  template:
    metadata:
      labels:
        app: webserver
        enabled: "true"
    spec:
      containers:
      - image: mgcrook11/webserver-node-app:1.2
        imagePullPolicy: IfNotPresent
        name: webserver-app
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
            # Type of readiness probe (one of the three types)
            exec:
              # readiness probe may be defined for each container in the pod.
              # ls /var/ready return 0 exit code if the file exists, non-zero if it doesn't.
              command:
                - ls
                - /var/ready
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
