gcp/k8_project/live/stage/app/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-loadbalancer
spec:
  type: LoadBalancer
  # Prevent a network hop, by configuring service to redirect all external traffic only to pods running on the node that received the connection.
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: demo
