gcp/k8_project/live/stage/app/webserver-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-nodeport
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30123
  selector:
    app: webserver
    enabled: "true"
